# non-local-means-filter

./: .gitignore  CMakeLists.txt  README.md  convert_to_csv.py  converter.cpp  main.cu  preprocessor.cpp  requirements.txt
cmake/: FindBoost.cmake  FindClangTidy.cmake  FindMatlab.cmake  FindOctave.cmake  FindOpenCV.cmake  FindOpenMP.cmake
lib/: definitions.h.in  nlm_cu_lib.cuh  nlm_lib.cpp  nlm_lib.h
